argocd/applications/bayn/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bayn
  labels:
    app.kubernetes.io/name: bayn
    app.kubernetes.io/part-of: bayn
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: bayn
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
